[package]
name = "vk-async"
version = "0.0.0"
edition = "2021"

[dependencies]
ash = "^0.33.3"
vk-mem = { version = "^0.2", git = "https://github.com/icanwalkonwater/vk-mem-rs.git" }
parking_lot = "^0.11"

futures = "^0.3"
thiserror = "^1.0"
log = "^0.4"

[dev-dependencies]
anyhow = "^1.0"
simplelog = "^0.11"
tokio = { version = "^1.14", features = ["rt-multi-thread", "macros", "parking_lot"] }

[features]
default = ["debug-utils"]
debug-utils = []
